# where-am-i

./: Playground.ipynb  PlaygroundForTheCoolKids.ipynb  README.md  Tutorial.ipynb  data.csv  data.tsv  data2.tsv  data_spin.tsv  data_test.csv  pyproject.toml
where_am_i/: __init__.py  tobi.py
